# DrumStudio

./: CMakeLists.txt  main.cpp
include/: Vector.h
include/Color/: Color.hpp
include/Draw/: Draw.hpp
include/Drum/: Drum.h
include/DrumStudio/: DrumStudio.h
include/File/: File.h
include/Font/: Font.hpp
include/Pattern/: Pattern.h
include/Sequencer/: Sequencer.h
include/Step/: Step.h
include/Throw_except/: Throw_except.h
src/: Vector.cpp  main.cpp
src/Drum/: Drum.cpp
src/DrumStudio/: DrumStudio.cpp
src/File/: File.cpp
src/Pattern/: Pattern.cpp
src/Sequencer/: Sequencer.cpp
src/Step/: Step.cpp
src/Throw_except/: Throw_except.cpp
